--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -18,11 +18,12 @@
 }
 
 * {
-	box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	-ms-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
 }
+
 
 
 header {
@@ -43,31 +44,20 @@ header h1 {
   width: 100%; 
 }
 
-nav {
-  width:100%;
-  height:60px;
-  background: #292f36;
-  postion:fixed;
-  z-index:10;
+.navbar {
+  padding: .5rem;
 }
 
-nav ul { 
-  list-style-type: none;
-  margin: 0 auto;
-  padding-left:0;
-  text-align:right;
-  width: 960px; 
-  max-width: 100%;
+.navbar-nav li {
+  padding-right: 15px;
 }
 
-nav ul li { 
-  display: inline-block; 
-  line-height: 60px;
-  margin-left: 10px;
+.nav-link {
+   font-size: 1.1em !important;
 }
-nav ul li a {
-  text-decoration: none; 
-  color: #a9abae;
+
+a, a:visited, a:hover {
+  text-decoration: none;
 }
 
 body {
@@ -86,28 +76,42 @@ label{
 
 .radio-toolbar input[type="radio"] {
   display: none;
-    
 }
 
 .radio-toolbar label {
+    background-color: white;
+    border: 2px outset #993399;
+    color: black; 
+    display: inline-block;
+    padding: 8px 16px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 25px;
+    margin: 5px 10px;
+    box-shadow: 0 9px #999;
+    -webkit-transition-duration: 0.1s;
+    transition-duration: 0.1s;
+    cursor: pointer;
+    font-weight: bold;
+}
 
-  display: inline-block;
-  background-color: #ddd;
-  padding: 4px 11px;
-  font-family: "Muli";
-  font-size: 16px;
-  cursor: pointer;
+.radio-toolbar label:hover {
+  background-color: #993399;
+  color: white; 
+}
+
+.radio-toolbar label:active {
+  background-color: #993399;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
 }
 
 .radio-toolbar input[type="radio"]:checked+label {
-  background-color: #bbb;
+  background-color: #993399;
+  color: white;
 }
 
 
-
-a, a:visited, a:hover {
-	text-decoration: none;
-}
 
 textarea, input {
     font-family: "Muli", "Gill Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -124,7 +128,7 @@ textarea:focus, input:focus, button:focus, button {
 }
 
 button {
-	border: none;
+    border: none;
 }
 
 .arc text {
@@ -272,7 +276,7 @@ form {
 	  stroke-width: 3px;
 	}
 	.grandparent:hover rect {
-	  fill: #FF9B42;
+	  fill: #993399;
 	}
 	.children rect.parent,
 	.grandparent rect {
